# avalon

./: .gitignore  CMakeLists.txt  avalon.kdev4  define.h  errors.cpp  errors.h  main.cpp
servers/: channelbase.cpp  channelbase.h
test/: speed_main.cpp  speed_workpool.cpp  test_main.cpp  test_pre_condition.cpp  test_workpool.cpp
thread/: asyncresult.cpp  asyncresult.h  asyncresult.tpl.h  errors.h  threadgroup.cpp  threadgroup.h  threadpool.cpp  threadpool.h  workpool.cpp  workpool.h
